# DEVI

./: .gitignore  README.md  docker-compose.yml  multi-stage.Dockerfile  soduco-back-cppbuilder.Dockerfile  soduco-back-runner.Dockerfile  stage_2.Dockerfile  stage_4.Dockerfile
rendu/: README.md  docker-compose.yml  soduco-back-cppbuilder.Dockerfile  soduco-back-runner.Dockerfile
rendu/resources/code/back/c++-bindings/: CMakeLists.txt
rendu/resources/code/back/c++-bindings/src/: Application-wrapper.hpp  DOMTypes-wrapper.hpp  ndimage_buffer_helper.hpp
rendu/resources/code/resources/: README.md  denominations-voies.csv
rendu/resources/code/server/: __init__.py  directories.py
rendu/resources/code/sources/include/: DOMTypes.hpp
rendu/resources/code/sources/src/: DOMBuilder_helpers.cpp  DOMBuilder_helpers.hpp  DOMEntriesExtractor.cpp  DOMExport.hpp  DOMLinesExtractor.cpp  DOMTextExtractor.cpp  DOMTypes.cpp  InternalTypes.hpp  Interval.cpp  PDFInfo.cpp  cli.cpp  config.hpp  deskew.cpp  detect_separators.cpp  display.hpp  load_pages.cpp  load_pages.hpp  region_lut.cpp  subsample.cpp  subsample.hpp  timer.hpp  watershed.hpp
resources/: requirements.txt
resources/code/: CMakeLists.txt  build.sh  conanfile.txt
resources/code/back/: Application.py  Loader.py  Parser.py  Parser2.py  Saver.py  __init__.py
resources/code/back/c++-bindings/src/: Application-wrapper.cpp  DOMTypes-wrapper.cpp  ndimage_buffer_helper.cpp
resources/code/back/parse/: parse_entries.py
resources/code/resources/: denominations-emprises-voies-actuelles.csv
resources/code/sources/include/: Application.hpp  CoreTypes.hpp  PDFInfo.hpp
resources/code/sources/include/THST/: rtree_detail.h
resources/code/sources/src/: Application.cpp  CoreTypes.cpp  DOMBlocksExtractor.cpp  DOMBlocksExtractor.hpp  DOMEntriesExtractor.hpp  DOMExport.cpp  DOMLinesExtractor.hpp  DOMTextExtractor.hpp  DOMTextTesseractExtractor.cpp  Interval.hpp  config.cpp  deskew.hpp  detect_separators.hpp  display.cpp  gaussian_directional_2d.cpp  gaussian_directional_2d.hpp  region_lut.hpp
